add signup handler
